--- a/MonsterCardTradingGame/MonsterCardTradingGame.csproj
+++ b/MonsterCardTradingGame/MonsterCardTradingGame.csproj
@@ -43,16 +43,18 @@
     <ItemGroup>
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="src\Card\Card.cs" />
-        <Compile Include="src\Card\MonsterCards\Dragons.cs" />
-        <Compile Include="src\Card\MonsterCards\FireElves.cs" />
-        <Compile Include="src\Card\MonsterCards\Goblins.cs" />
-        <Compile Include="src\Card\MonsterCards\Knights.cs" />
-        <Compile Include="src\Card\MonsterCards\Kraken.cs" />
-        <Compile Include="src\Card\MonsterCards\MonsterCard.cs" />
-        <Compile Include="src\Card\MonsterCards\Orks.cs" />
-        <Compile Include="src\Card\MonsterCards\Wizard.cs" />
-        <Compile Include="src\Card\SpellCard.cs" />
+        <Compile Include="src\Cards\Card.cs" />
+        <Compile Include="src\Cards\Element.cs" />
+        <Compile Include="src\Cards\MonsterCard.cs" />
+        <Compile Include="src\Cards\MonsterCards\Dragon.cs" />
+        <Compile Include="src\Cards\MonsterCards\FireElf.cs" />
+        <Compile Include="src\Cards\MonsterCards\Goblin.cs" />
+        <Compile Include="src\Cards\MonsterCards\Knight.cs" />
+        <Compile Include="src\Cards\MonsterCards\Kraken.cs" />
+        <Compile Include="src\Cards\MonsterCards\Ork.cs" />
+        <Compile Include="src\Cards\MonsterCards\Wizard.cs" />
+        <Compile Include="src\Cards\SpellCard.cs" />
+        <Compile Include="src\Gameplay\Battle.cs" />
         <Compile Include="src\ScoreBoard.cs" />
         <Compile Include="src\Screen\LoginScreen.cs" />
         <Compile Include="src\Screen\MainMenuScreen.cs" />
