--- a/MonsterCardTradingGame/MonsterCardTradingGame.csproj
+++ b/MonsterCardTradingGame/MonsterCardTradingGame.csproj
@@ -96,6 +96,7 @@
     <ItemGroup>
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="src\Database\DatabaseTest.cs" />
         <Compile Include="src\Database\UserData.cs" />
         <Compile Include="src\Game\Gameplay\Battle.cs" />
         <Compile Include="src\Game\Models\Cards\Card.cs" />
