--- a/MonsterCardTradingGame2/MonsterCardTradingGame2.csproj
+++ b/MonsterCardTradingGame2/MonsterCardTradingGame2.csproj
@@ -10,6 +10,12 @@
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql" Version="9.0.2" />
+      <PackageReference Include="NUnit" Version="4.3.2" />
+      <PackageReference Include="NUnit.Analyzers" Version="4.6.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="NUnit3TestAdapter" Version="5.0.0-beta.5" />
     </ItemGroup>
 
 </Project>
